--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "next": "^13.4.9",
+    "next-plausible": "^3.10.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
