--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "encoding": "^0.1.13",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.1",
+    "mixpanel-browser": "^2.47.0",
     "next": "^13.4.19",
     "next-plausible": "^3.10.2",
     "react": "^18.2.0",
