--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.33.1",
     "@tailwindcss/forms": "^0.5.5",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
