Search for similar users given a username

--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@pinecone-database/pinecone": "^0.1.6",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.33.1",
     "@tailwindcss/forms": "^0.5.5",
     "@tippyjs/react": "^4.2.6",
+    "@xenova/transformers": "^2.5.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cohere-ai": "^5.1.0",
     "date-fns": "^2.30.0",
     "debounce": "^1.2.1",
     "downshift": "^8.1.0",
     "encoding": "^0.1.13",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.1",
+    "langchain": "^0.0.138",
     "mixpanel-browser": "^2.47.0",
     "next": "^13.4.19",
     "next-plausible": "^3.10.2",
@@ -46,9 +50,6 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "swr": "^2.2.1",
-    "@pinecone-database/pinecone": "^0.1.6",
-    "cohere-ai": "^5.1.0",
-    "langchain": "^0.0.138",
     "yup": "^1.2.0"
   },
   "devDependencies": {
