--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tippyjs/react": "^4.2.6",
     "@xenova/transformers": "^2.5.4",
     "axios": "^1.4.0",
+    "chromadb": "^1.5.11",
     "classnames": "^2.3.2",
     "cohere-ai": "^5.1.0",
     "date-fns": "^2.30.0",
@@ -39,6 +40,7 @@
     "encoding": "^0.1.13",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.1",
+    "hnswlib-node": "^2.0.0",
     "langchain": "^0.0.138",
     "mixpanel-browser": "^2.47.0",
     "next": "^13.4.19",
@@ -50,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "swr": "^2.2.1",
+    "typewriter-effect": "^2.21.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
